--- a/xplayer/src/main/res/layout/fragment_webvideo.xml
+++ b/xplayer/src/main/res/layout/fragment_webvideo.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <TextView 
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+    <ImageView
+        android:id="@+id/wifi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="web video"
+        android:src="@drawable/wifi"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
         />
-
-</LinearLayout>
+    <TextView
+        android:id="@+id/check_network"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="请检查您的网络"
+        android:layout_below="@id/wifi"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:visibility="gone"
+        />
+</RelativeLayout>
