--- a/xplayer/src/main/res/layout/activity_short_video_player.xml
+++ b/xplayer/src/main/res/layout/activity_short_video_player.xml
@@ -6,7 +6,7 @@
     android:background="@color/transparent_black_85" >
 
     <TextView
-        android:id="@+id/txt_right"
+        android:id="@+id/save_to_local"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
@@ -21,10 +21,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_toLeftOf="@id/txt_right"
+        android:layout_toLeftOf="@id/save_to_local"
         android:layout_margin="10dp"
         android:textColor="@color/white"
         android:background="@drawable/shape_save"
+        android:visibility="gone"
         android:text="上传"  />
     
     <com.sdust.xplayer.widget.SurfaceVideoView
