--- a/xplayer/src/main/res/layout/fragment_shortvideo.xml
+++ b/xplayer/src/main/res/layout/fragment_shortvideo.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:listSelector="@drawable/list_item_bg"
+        android:scrollbars="none"
         >
     </ListView>
     <ImageView
