--- a/xplayer/src/main/res/layout/list_item_local_video.xml
+++ b/xplayer/src/main/res/layout/list_item_local_video.xml
@@ -21,7 +21,9 @@
         android:layout_toLeftOf="@+id/txt_video_size"
         android:layout_toRightOf="@id/img_video_icon"
         android:maxLines="1"
-        android:textSize="15sp" />
+        android:textSize="18sp"
+        tools:text="视频名称"
+        />
 
     <TextView
         android:id="@+id/txt_video_duration"
@@ -29,6 +31,7 @@
         android:layout_alignBottom="@id/img_video_icon"
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@id/img_video_icon"
+        tools:text="视频时长"
 		 />
 
     <TextView
@@ -36,6 +39,7 @@
         style="@style/local_video_text"
         android:layout_alignBottom="@id/img_video_icon"
         android:layout_alignParentRight="true"
+        tools:text="视频大小"
         />
 
 </RelativeLayout>
