--- a/xplayer/src/main/res/layout/titlebar.xml
+++ b/xplayer/src/main/res/layout/titlebar.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@color/titlebar_bg"
+    android:background="@color/colorPrimary"
     android:orientation="horizontal">
 
     <TextView
@@ -20,10 +20,5 @@
         android:id="@+id/short_video"
         style="@style/titlebar_menu"
         android:text="@string/short_video" />
-
-    <TextView
-        android:id="@+id/file"
-        style="@style/titlebar_menu"
-        android:text="@string/file" />
 
 </LinearLayout>
